examples/test/testpolicy7081.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7081
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key39: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value46
      podSelector:
        matchLabels:
          key25: value23
          key4: value38
          key9: value1
